@@ -1,4 +1,4 @@
-.TH SLURMCTLD "8" "June 2006" "slurmctld 2.0" "Slurm components"
+.TH SLURMCTLD "8" "March 2010" "slurmctld 2.2" "Slurm components"
 .SH "NAME"
 slurmctld \- The central management daemon of Slurm.
 .SH "SYNOPSIS"
@@ -31,6 +31,10 @@ Help; print a brief summary of command options.
 .TP
 \fB\-L <file>\fR
 Write log messages to the specified file.
+
+.TP
+\fB\-n <value>\fR
+Set the daemon's nice value to the specified value, typically a negative number.
 
 .TP
 \fB\-R\fR
