@@ -1,4 +1,4 @@
-.TH SLURMD "8" "March 2009" "slurmd 2.0" "Slurm components"
+.TH SLURMD "8" "March 2010" "slurmd 2.2" "Slurm components"
 
 .SH "NAME"
 slurmd \- The compute node daemon for SLURM.
@@ -19,7 +19,7 @@ abnormally.
 .TP
 \fB\-d <file>\fR
 Specify the fully qualified pathname to the \fBslurmstepd\fR program to be used
-for sheperding user job steps. This can be useful for testing purposes.
+for shepherding user job steps. This can be useful for testing purposes.
 .TP
 \fB\-D\fR
 Run slurmd in the foreground. Error and debug messages will be copied to stderr.
@@ -39,6 +39,12 @@ paging of the slurmd process. This may help in cases where nodes are
 marked DOWN during periods of heavy swap activity. If the mlockall(2)
 system call is not available, an error will be printed to the log
 and slurmd will continue as normal.
+
+.TP
+\fB\-n <value>\fR
+Set the daemon's nice value to the specified value, typically a negative number.
+Also note the \fBPropagatePrioProcess\fR configuration parameter.
+
 .TP
 \fB\-v\fR
 Verbose operation. Multiple \-v's increase verbosity.
@@ -66,7 +72,7 @@ configuration file, \fBslurm.conf\fR.
 
 .SH "COPYING"
 Copyright (C) 2002\-2007 The Regents of the University of California.
-Copyright (C) 2008\-2009 Lawrence Livermore National Security.
+Copyright (C) 2008\-2010 Lawrence Livermore National Security.
 Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
 CODE\-OCEC\-09\-009. All rights reserved.
 .LP
